[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [build-system]
# requires = ["hatchling>=1.5.0"]
# build-backend = "hatchling.build"

[project]
name = "geom-dtn"
version = "0.0.1"
description = "."
readme = "README.md"
license = {file = "LICENSE.txt"} # "Apache-2.0"
requires-python = ">=3.7, <4"
authors = [
    { name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "skyfield",
  "matplotlib"
]

# [tool.hatch.build]
# directory = "dist"

# [tool.hatch.build.targets.sdist]
# packages = ["src/geom_dtn"]
# exclude = ["/ignore", "/dist", "/notes"]

# [tool.hatch.build.targets.wheel]
# packages = ["src/geom_dtn", "src/geom_dtn/ext"]
# exclude = ["/ignore", "/dist", "/notes"]

# [project.entry-points.extensions]
# hatch_build = "geom_dtn:ExampleExtensionModules"

